# Network-Detector-and-Web-Monitor

./: .gitignore  README.md  docker-compose.yml  netalertx.sh  pyproject.toml  scan-devices.py
backend/: Dockerfile  Note-API.md  config.json  requirements.txt
backend/backend/: asgi.py  classes.py  config.json  cron.py  models.py  packet_capture.py  serializers.py  settings.py  traffic_analyze.py  urls.py  views.py
backend/backend/migrations/: 0001_initial.py
backend/devices/: apps.py  cron.py  models.py  urls.py  views.py
backend/icmp_monitoring/: apps.py  models.py  serializers.py  urls.py  views.py
backend/ip_scanning/: admin.py  apps.py  cron.py  models.py  serializers.py  urls.py  views.py
backend/ip_scanning/templates/: index.html
backend/notifications/: apps.py  classes.py  consumers.py  models.py  routing.py  serializers.py  signals.py  urls.py  views.py
backend/packet_capture/: apps.py  classes.py  models.py  serializers.py  urls.py  views.py
backend/pcap_files/: .place_holder
backend/speedtest_mon/: admin.py  apps.py  classes.py  cron.py  models.py  serializers.py  urls.py  views.py
backend/system/: apps.py  urls.py  views.py
backend/traffic_analysis/: apps.py  classes.py  models.py  serializers.py  urls.py  views.py
backend/web_service_mon/: apps.py  classes.py  cron.py  models.py  serializers.py  urls.py  views.py
frontend/: Dockerfile  components.json  package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.css  App.js
frontend/src/components/: Api_call.js  (+16 more)
nginx/: default.conf
(+2 files in other folders)
